--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,18 @@
     <groupId>nz.co.kevindoran</groupId>
     <artifactId>highcharts-jsf</artifactId>
     <version>1.0</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>Highcharts for JSF</name>
     <description>A collection of JSF components for making use of Highcharts in JSF easy.</description>
     <url>http://maven.apache.org</url>
-
+    
+    <developers>
+        <developer>
+            <name>Kevin Doran</name>
+            <email>k.a.doran1@gmail.com</email>
+        </developer>
+    </developers>
+    
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
@@ -19,7 +26,8 @@
     </licenses>
 
     <scm>
-        <url>https://k.a.doran1@code.google.com/p/highcharts-jsf/ </url>
+        <url>https://k.a.doran1@code.google.com/p/highcharts-jsf</url>
+        <connection>https://k.a.doran1@code.google.com/p/highcharts-jsf</connection>
     </scm>
   
     <properties>
@@ -62,6 +70,30 @@
               
         <plugins>
             <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-source-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>attach-sources</id>
+                  <goals>
+                    <goal>jar</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>        
+            <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>attach-javadocs</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
@@ -126,5 +158,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
